@@ -4,7 +4,10 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not aq_base() the underlaying listing object when delegating attribute
+  access to it. This fixes method calls depending on acquisition to work
+  properly.
+  [dokai]
 
 
 1.0.4 (2013-01-01)
@@ -28,7 +31,7 @@ Changelog
 ------------------
 
 - Change ContentTypeClass to return contenttype-{portal_type} to match
-  what the rest of Plone expects. This fixes sprite based icons for 
+  what the rest of Plone expects. This fixes sprite based icons for
   pages/documents.
   [gaudenz]
 
